# pinnect-gamemap

./: .gitignore  README.md
contracts/: Cargo.toml  README.md
contracts/src/: main.rs  pinnect.sol
frontend-iOS/CoMap.xcodeproj/project.xcworkspace/xcuserdata/race.xcuserdatad/: UserInterfaceState.xcuserstate
